-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 23, 24
-
Component/s: hotspot
-
b19
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8342034 | 23.0.2 | Martin Doerr | P4 | Resolved | Fixed | b03 |
| JDK-8342395 | 21.0.6 | Martin Doerr | P4 | Resolved | Fixed | b01 |
| JDK-8369071 | 17.0.18 | Martin Doerr | P4 | Resolved | Fixed | b01 |
# Internal Error (/priv/jenkins/client-home/workspace/openjdk-jdk-aix_ppc64-dbg/jdk/src/hotspot/cpu/ppc/frame_ppc.inline.hpp:69), pid=14942644, tid=6948
# assert(_cb == nullptr || _cb->as_nmethod()->insts_contains_inclusive(_pc)) failed: original PC must be in the main code section of the compiled method (or must be immediately following it)
--------------- T H R E A D ---------------
Current thread (0x00000001178f4370): JfrThreadSampler "JFR Thread Sampler" [id=6948, stack(0x000000011a640000,0x000000011a85b888) (2158K)] _threads_hazard_ptr=0x0000000116367cb0, _nested_threads_hazard_ptr_cnt=0
Stack: [0x000000011a640000,0x000000011a85b888], sp=0x000000011a859c80, free space=2151k
No context given, using current context.
Native frame:
iar: 0x09000000167b35d8 libjvm.so::AixNativeCallstack::print_callstack_for_context(outputStream*, ucontext_t const*, bool, char*, unsigned long)+0x4cc (C++ uses_alloca saves_cr saves_lr stores_bc gpr_saved:18 fixedparms:5 parmsonstk:1)
lr: 0x00000000000007d0 (unknown module)::(unknown function)+?
sp: 0x000000011a858f40 (base - 0x2948)
rtoc: 0x08001000a03d9a40
|---stackaddr----| |----lrsave------|: <function name>
0x000000011a859330 - 0x09000000167b3098 libjvm.so::os::Aix::platform_print_native_stack(outputStream*, void const*, char*, int, unsigned char*&)+0x24 (C++ uses_alloca saves_lr stores_bc gpr_saved:1 fixedparms:5 parmsonstk:1)
0x000000011a8593b0 - 0x09000000165438d0 libjvm.so::VMError::report(outputStream*, bool)+0x1c0c (C++ fp_present uses_alloca saves_cr saves_lr stores_bc gpr_saved:18 fixedparms:2 parmsonstk:1)
0x000000011a859c90 - 0x090000001652deb0 libjvm.so::VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x72c (C++ uses_alloca saves_lr stores_bc gpr_saved:18 fixedparms:8 parmsonstk:1)
0x000000011a859ea0 - 0x090000001652d738 libjvm.so::VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, char*)+0x58 (C++ uses_alloca saves_lr stores_bc gpr_saved:2 fixedparms:7 parmsonstk:1)
0x000000011a859f40 - 0x090000001652d418 libjvm.so::report_vm_error(char const*, int, char const*, char const*, ...)+0x8c (C++ uses_alloca saves_lr stores_bc gpr_saved:5 fixedparms:4 parmsonstk:1)
0x000000011a859fe0 - 0x0900000016531f28 libjvm.so::frame::setup(frame::kind)+0x28c (C++ uses_alloca saves_lr stores_bc gpr_saved:3 fixedparms:2 parmsonstk:1)
0x000000011a85a070 - 0x09000000165d77e8 libjvm.so::frame::safe_for_sender(JavaThread*)+0x28c (C++ fp_present uses_alloca saves_cr saves_lr stores_bc gpr_saved:9 fixedparms:2 parmsonstk:1)
0x000000011a85a170 - 0x09000000165dda7c libjvm.so::JfrVframeStream::next_vframe()+0x130 (C++ fp_present uses_alloca saves_lr stores_bc gpr_saved:8 fixedparms:1 parmsonstk:1)
0x000000011a85a260 - 0x0900000016b2a7ec libjvm.so::JfrStackTrace::record_async(JavaThread*, frame const&)+0x314 (C++ uses_alloca saves_cr saves_lr stores_bc gpr_saved:18 fixedparms:3 parmsonstk:1)
0x000000011a85aaf0 - 0x0900000016b29764 libjvm.so::OSThreadSampler::protected_task(SuspendedThreadTaskContext const&)+0x124 (C++ fp_present uses_alloca saves_lr stores_bc gpr_saved:4 fixedparms:2 parmsonstk:1)
0x000000011a85abd0 - 0x0900000016b294e8 libjvm.so::OSThreadSampler::do_task(SuspendedThreadTaskContext const&)+0xd8 (C++ uses_alloca saves_lr stores_bc gpr_saved:3 fixedparms:2 parmsonstk:1)
0x000000011a85af20 - 0x0900000016b2ae30 libjvm.so::SuspendedThreadTask::internal_do_task()+0x6c (C++ uses_alloca saves_lr stores_bc gpr_saved:2 fixedparms:1 parmsonstk:1)
0x000000011a85afb0 - 0x0900000016b2ad68 libjvm.so::SuspendedThreadTask::run()+0x20 (C++ uses_alloca saves_lr stores_bc gpr_saved:2 fixedparms:1 parmsonstk:1)
0x000000011a85b030 - 0x0900000016b292c0 libjvm.so::JfrThreadSampleClosure::sample_thread_in_java(JavaThread*, JfrStackFrame*, unsigned int)+0xa8 (C++ uses_alloca saves_cr saves_lr stores_bc gpr_saved:7 fixedparms:4 parmsonstk:1)
0x000000011a85b140 - 0x0900000016b28ef4 libjvm.so::JfrThreadSampleClosure::do_sample_thread(JavaThread*, JfrStackFrame*, unsigned int, JfrSampleType)+0x1a8 (C++ uses_alloca saves_cr saves_lr stores_bc gpr_saved:9 fixedparms:5 parmsonstk:1)
0x000000011a85b200 - 0x0900000016b281a4 libjvm.so::JfrThreadSampler::task_stacktrace(JfrSampleType, JavaThread**)+0x464 (C++ fp_present uses_alloca saves_cr saves_lr stores_bc gpr_saved:14 fixedparms:3 parmsonstk:1)
0x000000011a85b570 - 0x0900000016b27ca0 libjvm.so::JfrThreadSampler::run()+0x198 (C++ uses_alloca saves_cr saves_lr stores_bc gpr_saved:12 fixedparms:1 parmsonstk:1)
0x000000011a85b640 - 0x0900000016650b68 libjvm.so::Thread::call_run()+0x128 (C++ uses_alloca saves_lr stores_bc gpr_saved:3 fixedparms:1 parmsonstk:1)
0x000000011a85b6d0 - 0x09000000166500c8 libjvm.so::thread_native_entry(Thread*)+0x214 (C++ uses_alloca saves_lr stores_bc gpr_saved:10 fixedparms:1 parmsonstk:1)
0x000000011a85b7a0 - 0x090000000056204c libpthreads.a::_pthread_body+0xec (C saves_lr stores_bc gpr_saved:1 fixedparms:1 )
0x000000011a85b820 - 0x0000000000000000
*** end of backchain ***
-----------------------
- backported by
-
JDK-8342034 Assertion on AIX - original PC must be in the main code section of the compiled method
-
- Resolved
-
-
JDK-8342395 Assertion on AIX - original PC must be in the main code section of the compiled method
-
- Resolved
-
-
JDK-8369071 Assertion on AIX - original PC must be in the main code section of the compiled method
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/6f50c6da
-
Commit(master)
openjdk/jdk21u-dev/8e19c8f8
-
Commit(master)
openjdk/jdk23u/d1bd5c08
-
Commit(master)
openjdk/jdk/9a25f822
-
Review(master)
openjdk/jdk17u-dev/3998
-
Review(master)
openjdk/jdk21u-dev/1031
-
Review(master)
openjdk/jdk23u/140
-
Review(master)
openjdk/jdk/21189