8339386: Assertion on AIX - original PC must be in the main code section of the compiled method